Fix actions buttons alignment

--- a/client/app/styles/_message-list.styl
+++ b/client/app/styles/_message-list.styl
@@ -46,7 +46,9 @@
         button i
             vertical-align baseline
 
+        [role=group]
         .dropdown
+        .menu-action
             display flex
 
         .dropdown-toggle
@@ -57,8 +59,6 @@
         flex   1
 
     .filters
-        display flex
-
         .btn-label
             padding-left .45em
             display      none
